--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- usiamo fontawesome anche se icone non sono identiche, così lo vediamo -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Discord HP replica</title>
 </head>
 <body>
+  <!-- intestazione -->
+  <header> 
+    <nav class="container clearfix">
+        <div class="logo">
+            <a href="#"><img src="img/logo.svg" alt="Logo"></a>
+        </div>
+        <ul>
+            <li><a href="#">Scarica</a></li>
+            <li><a href="#">Perch&eacute; Discord</a></li>
+            <li><a href="#">Nitro</a></li>
+            <li><a href="#">Sicurezza</a></li>
+            <li><a href="#">Assistenza</a></li>
+        </ul>
+        <div id="accedi">
+            <a class="btn" href="#">Accedi</a>
+        </div>
+    </nav>
+  </header>
+  <!-- /intestazione -->
 
+  <!-- corpo -->
+  <main>
+    <section id="jumbotron">
+        <div class="container">
+            <h1>Il tuo posto per parlare</h1>
+            <p>
+                Che tu faccia parte di un club scolastico, gruppo di gamer, comunit&agrave; artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+            </p>
+            <a href="#" class="btn white-black">
+                <i class="fas fa-long-arrow-alt-down"></i>
+                Scarica per Mac
+            </a>
+            <a href="#" class="btn black-white">
+                Apri Discord nel tuo browser
+            </a>
+        </div>
+    </section>
+  </main>
+  <!-- /corpo -->
+
+  <!-- footer -->
+  <footer>
+
+  </footer>
+  <!-- /footer -->
     
 </body>
 </html>
